<resources>
    <string name="app_name">台灣童學繪</string>

    <string name="play">Play
    </string>
    <string name="stats">Stats
    </string>
    <string name="settings">Settings
    </string>
    <string name="str_quiznumber">第 %d 題</string>
    <string name="str_correctnumber">O&#160;&#160;&#160;&#160;%d題</string>
    <string name="str_wrongnumber">X&#160;&#160;&#160;&#160;%d題</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">輸入你的信箱</string>
    <string name="prompt_password">輸入你的密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="leave">離開</string>
    <string name="next">下一題</string>
    <string name="sign_out">登出</string>
    <string name="login_error">你的輸入格式錯誤唷！再檢查一次</string>
    <string name="login_error_title">登入失敗QQ</string>
    <string name="register_error_title">註冊格式錯誤</string>
    <string name="ok">我知道了</string>
    <string name="register">註冊</string>
    <string name="timeup">時間到囉！</string>
    <string name="timeup_msg">Bubble,你已經用1小時囉\n該讓眼睛休息一下了~</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DrawLandMark</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">設定</string>
    <string name="go">GO！！</string>
    <string name="finishregister">完成!!</string>
    <string name="doublecheck">再次確認密碼</string>
    <string name="doublecheck_error">兩次密碼不相同，請再檢查一次</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="welcome_msg">歡迎你加入台灣童學繪\n先來讓我們來認識你一下吧!!</string>
    <string name="name">暱名:</string>
    <string name="setnewprofile">建立新頭貼</string>

    <string name="level">Level:0</string>
    <string name="coin">$ 9999999</string>

    <string name="congra">恭喜獲得</string>
    <string name="coinXP">經驗值：100xp；b幣：300 coins</string>
    <string name="finishgame">恭喜你答完五題囉~</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="insert">Insert</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <string name="together_drawing">大家一起來畫畫，首先選擇你喜歡的照片</string>
    <string name="do_nothing">此功能無法使用</string>
    <string name="load_img_fail">上傳照片失敗</string>
    <string name="upload_success">上傳成功</string>
    <string name="plz_pick_img">請上傳圖片</string>
    <string name="forbiddencity">國立故宮博物院典藏華夏文物菁華，浩瀚豐富，守護人類文化史、藝術史的瑰寶。
        至2016年底國立故宮博物院已邁入開館91週年，享譽世界四大博物館之一
        。本院藏品以中華文物為主，藏品多精華，遂有為中華文化寶庫之譽。</string>
    <string name="midLakePavilion">臺中公園日月湖原係自然水塘，經人工整修後，水池約有四千一百坪，
        湖心亭係日明治41年（西元1908年）十月為慶祝縱貫鐵路全線通車典禮所建，舊稱「池亭」，為和洋風格建築，
        來臺主持通車式的日本閑院宮載仁親王曾於此亭休憩、觀看表演。</string>
    <string name="anpingFort">初荷蘭人以軍商結合的隊伍於1624年占領今日安平，並建熱蘭遮城為其防禦要塞。
        鄭成功取荷蘭城後，改稱安平鎮，臺人因此稱其為王城。清領時代，失卻其重要性，加上清兵破壞熱蘭遮城建億載金城，
        故日漸荒廢。日治後重建，乃稱安平古堡。</string>
    <string name="intro">歡迎來到\n台灣童學繪</string>
    <string name="intro1">※近年來台灣數位學習產業持續向上提升\n※現在社會少子化日益嚴重，家長對孩子的教育更加重視\n
        ※因此我們針對此推出一款創新教育學習App–台灣童學繪\n※讓孩童透過遊戲化數位學習提升學習意願、圖像記憶表現及增加信心，還可以更加認識台灣。</string>
    <string name="intro2">前往\n台灣童學繪</string>

    <string name="intro">歡迎來到\n台灣童學繪</string>
    <string name="intro1">※近年來台灣數位學習產業持續向上提升\n※現在社會少子化日益嚴重，家長對孩子的教育更加重視\n
        ※因此我們針對此推出一款創新教育學習App–台灣童學繪\n※讓孩童透過遊戲化數位學習提升學習意願、圖像記憶表現及增加信心，還可以更加認識台灣。</string>
    <string name="intro2">前往\n台灣童學繪</string>

</resources>
