<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightYellow"
    tools:context=".SetProfileActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="227dp"
        android:layout_height="76dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_msg"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_setProfilephoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/bubble" />

    <EditText
        android:id="@+id/et_setName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_setProfilephoto" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="28dp"
        android:text="@string/setnewprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_setProfilephoto" />

    <Button
        android:id="@+id/bt_setOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="136dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="44dp"
        android:text="@android:string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setName"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>