<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_background"
    tools:context=".SolveActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="201dp"
        android:layout_height="164dp"
        android:layout_marginEnd="200dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="200dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="276dp"
        android:src="@drawable/bubble"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="402dp"
        android:layout_height="316dp"
        android:layout_marginBottom="208dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="-3dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-3dp"
        android:src="@drawable/dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_finishgame"
        android:layout_width="178dp"
        android:layout_height="26dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="86dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="64dp"
        android:text="@string/finishgame"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bt_leave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tv_solve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:text="這裡是解答區"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <Button
        android:id="@+id/bt_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="76dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="76dp"
        android:layout_marginStart="8dp"
        android:text="@string/leave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_nextquestion"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_nextquestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>